--- a/src/styles/sections/_about.scss
+++ b/src/styles/sections/_about.scss
@@ -1,7 +1,7 @@
 .about.section {
   padding-left: 10vw;
   position: relative;
-  min-height: 100vh;
+  min-height: 90vh;
 
   @include tablet {
     padding-left: 40vw;
