--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -17,7 +17,7 @@ $sec-blend: exclusion;
 	// 0.90145152017568
 
 	--size-xgg: calc(0.5rem + 15vw);
-	--size-gg: calc(0.5rem + 16.18vw);
+	--size-gg: calc(0.5rem + 13vw);
 	--size-g: calc(0.5rem + 6.18vh);
 	--size-m: calc(0.5rem + 3.81924vh);
 	--size-p: calc(0.5rem + 1.45865941776vh);
